<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ElectriCity</string>
    <string name="electricoins">ElectriCoins</string>
    <string name="app_id">653566869354</string>
    <string name="achievement_thats_a_bingo">CgkI6v773IITEAIQAw</string>
    <string name="achievement_money_bag">CgkI6v773IITEAIQAA</string>
    <string name="achievement_first_trip">CgkI6v773IITEAIQBA</string>
    <string name="achievement_you_first_crown">CgkI6v773IITEAIQBg</string>
    <string name="achievement_climbing_up_the_ladder">CgkI6v773IITEAIQBw</string>
    <string name="achievement_king_of_coins">CgkI6v773IITEAIQCA</string>
    <string name="leaderboard_most_coins">CgkI6v773IITEAIQAg</string>
    <string name="leaderboard_most_trips">CgkI6v773IITEAIQBQ</string>
    <!-- Localized strings -->
    <string name="action_settings">Settings</string>
    <string name="action_ach">Achievements</string>
    <string name="action_login">Log in</string>
    <string name="action_login_text">with västtrafik account</string>
    <string name="ticket">Ticket</string>
    <string name="ticket_days_left">days left</string>
    <string name="ticket_fill">Charge</string>
    <string name="ticket_up">please</string>
    <string name="buses">Buses</string>
    <string name="profile">Profile</string>
    <string name="profile_track">Track</string>
    <string name="profile_title">Title</string>
    <string name="payment_methods">Payment methods:</string>
    <string name="week_left">1 week left</string>
    <string name="unlocked">Unlocked</string>
    <!-- Button strings -->
    <string name="btn_ticket">Single ticket</string>
    <string name="btn_ticket_descr">Button for buying Single ticket</string>
    <string name="btn_period">Period card</string>
    <string name="btn_period_descr">Button for buying Period card</string>
    <string name="btn_electricoin">ElectriCoin</string>
    <string name="btn_electricoin_descr">Button for buying ElectriCoin</string>
    <string name="btn_achievements">Achievements</string>
    <string name="btn_achievements_descr">Button for Achievements</string>
    <string name="btn_leaderboard">Leaderboards</string>
    <string name="btn_leaderboard_descr">Button for Leaderboards</string>
    <string name="btn_gifts">Gifts</string>
    <string name="btn_gifts_descr">Button for Gifts</string>
    <string name="profile_moneybag_descr">SMS</string>
    <string name="profile_rank_descr">SMS</string>
    <string name="profile_image_descr">SMS</string>
    <!-- Login strings -->
    <string name="login_text">Log in</string>
    <!-- Profile strings -->
    <string name="profile_placeholder_name">Please sign in</string>
    <!-- Dialog strings -->
    <string name="dialog_ticket_select">Select type of ticket you want to purchase:</string>
    <string name="dialog_ticket_agree">I agree to the terms.</string>
    <string name="dialog_coin_amount">Choose</string>
    <string name="dialog_coin_text">1 ElectriCoin equals 1 free day to travel with the bus.</string>
    <string name="dialog_settings_sounds">Sounds</string>
    <string name="dialog_settings_vt">Västtrafik</string>
    <string name="dialog_settings_google">Google Play</string>
    <string name="dialog_settings_logout">Log out</string>
    <string name="dialog_settings_clear">Clear</string>
    <string name="dialog_settings_add">+10</string>
    <string name="dialog_settings_battery">Battery</string>
    <string name="dialog_settings_depleat">Depleat</string>

    <string-array name="stations_array">
        <item>Lindholmen</item>
        <item>Frihamnen</item>
        <item>Korsvägen</item>
        <item>Götaplatsen</item>
        <item>Johanneberg</item>
    </string-array>
    <string-array name="colors_array">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="titles_array">
        <item>Environmentalist</item>
        <item>Achieveaholic</item>
        <item>Zombie</item>
        <item>Big-hearted</item>
        <item>King of Coin</item>
    </string-array>

    <!-- Placeholder Strings -->
    <string name="placeholder_number">15</string>
    <string name="placeholder_number_per_number">3/12</string>
    <string name="placeholder_month">May</string>
    <string name="placeholder_day">24</string>
    <string name="placeholder_percent">45%</string>

</resources>