<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ticket_name_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="64dp"
                android:paddingLeft="10dp"
                android:layout_height="64dp"
                android:contentDescription="@string/profile_image_descr"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/profile_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/placeholder_month"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <TextView
                android:id="@+id/profile_achiviement_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_trophy"
                android:gravity="center|right"
                android:text="@string/placeholder_percent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profile_electricoin_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_current_amount_color"
                android:gravity="center|right"
                android:text="@string/placeholder_number"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/EL_battery_light" />

    <Spinner
        android:id="@+id/planets_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp" />

    <ImageView
        android:id="@+id/profile_track_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_track_achievaholic"
        android:layout_weight="1" >
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_payment_left"
            android:contentDescription="@string/btn_achievements_descr"
            android:drawableTop="@drawable/ic_games_achievements_noshadow"
            android:onClick="onAch"
            android:text="@string/btn_achievements"
            android:textColor="@color/EL_btn_text"
            android:textSize="14sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/EL_button_divider" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_payment_middle"
            android:contentDescription="@string/btn_leaderboard_descr"
            android:drawableTop="@drawable/ic_games_leaderboards_noshadow"
            android:onClick="onLead"
            android:text="@string/btn_leaderboard"
            android:textColor="@color/EL_btn_text"
            android:textSize="14sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/EL_button_divider" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_payment_right"
            android:contentDescription="@string/btn_gifts_descr"
            android:drawableTop="@drawable/ic_games_gifts_noshadow"
            android:onClick="onGift"
            android:text="@string/btn_gifts"
            android:textColor="@color/EL_btn_text"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>