<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/EL_blue"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/ic_amount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dialog_vertical_margin"
        android:paddingLeft="@dimen/dialog_horizontal_margin"
        android:paddingRight="@dimen/dialog_horizontal_margin"
        android:paddingTop="@dimen/dialog_vertical_margin" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/explanation_picture" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:text="@string/dialog_coin_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/dialog_coin_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="1 day"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <SeekBar
            android:id="@+id/dialog_coins_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="6"
            android:maxHeight="21dp"
            android:minHeight="21dp"
            android:progress="0"
            android:progressDrawable="@drawable/seekbar_progress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dialog_coin_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_current_amount_color"
                android:drawablePadding="5dp"
                android:visibility="gone"
                android:gravity="center|right"
                android:text="@string/placeholder_number"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:visibility="gone"
                android:paddingLeft="18dp"
                android:text="-"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dialog_coin_amount_subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:visibility="gone"
                android:text="5"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="5dp"
                android:paddingLeft="18dp"
                android:text="="
                android:visibility="gone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dialog_coin_amount_equals"
                android:layout_width="wrap_content"
                android:drawableLeft="@drawable/ic_current_amount_color"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="5dp"
                android:gravity="center|right"
                android:text="10"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>